--- a/action.yaml
+++ b/action.yaml
@@ -2,11 +2,11 @@
 # Date: 30/03/2020
 
 name:        'Feather'
-description: 'TODO'
+description: 'Update Twitter Status using Github Action Workflow'
 author:      'ShaidK'
 run:
-	using: 'docker'
-	image: 'DockerFile'
+  using: 'docker'
+  image: 'DockerFile'
 branding:
-	color: 'blue'
-	icon:  'twitter'
+  color: 'blue'
+  icon:  'twitter'
